[gd_scene load_steps=16 format=3 uid="uid://uml5cughx4v7"]

[ext_resource type="Script" path="res://scenes/game/levels/rooms/fire/fire.gd" id="1_m1f4g"]
[ext_resource type="Texture2D" uid="uid://dotjr8wdaqrti" path="res://assets/sprites/scenes/fire/cocina.png" id="1_tk8xb"]
[ext_resource type="PackedScene" uid="uid://cw4xeegs5b2fq" path="res://scenes/game/character/main_character/main_character.tscn" id="3_wj3po"]
[ext_resource type="Texture2D" uid="uid://c4tt3hsybb32k" path="res://assets/sprites/scenes/fire/Flame.png" id="3_y3ryq"]
[ext_resource type="PackedScene" uid="uid://bkjboqn4xwl7m" path="res://scenes/game/levels/camera/camera.tscn" id="4_52rv8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bk3ox"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_umw8p"]
offsets = PackedFloat32Array(0, 0.0880282, 0.859155, 0.919014, 0.992958)
colors = PackedColorArray(1, 0.854902, 0, 0, 0.976471, 0.0823529, 0.0666667, 0.384314, 1, 0.284507, 0, 1, 1, 0.207843, 0, 0.203922, 1, 0.152941, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u8mye"]
gradient = SubResource("Gradient_umw8p")
width = 100

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d8284"]
lifetime_randomness = 0.6
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 200.0
angular_velocity_min = 30.0
angular_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = 30.0
angle_max = 120.0
scale_min = 0.2
scale_max = 0.2
color_ramp = SubResource("GradientTexture1D_u8mye")
hue_variation_min = 1.0
hue_variation_max = 1.0

[sub_resource type="Gradient" id="Gradient_whkah"]
offsets = PackedFloat32Array(0, 0.084507, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.278431, 1, 1, 1, 0.231373)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4cnlf"]
gradient = SubResource("Gradient_whkah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_384ip"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 3.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(0.909804, 0.909804, 0.909804, 1)
color_ramp = SubResource("GradientTexture1D_4cnlf")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_64g2n"]
vertices = PackedVector2Array(470, 800, 4, 810, 14, 728, 134.109, 675.235, 205, 635, 466, 599, 712, 658, 981, 802, 909, 616, 1428, 741, 1432, 800, 1265, 666, 1076, 548)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(0, 3, 4, 5, 6, 7), PackedInt32Array(7, 6, 8), PackedInt32Array(9, 10, 7, 11), PackedInt32Array(12, 11, 7, 8)])
outlines = Array[PackedVector2Array]([PackedVector2Array(205, 635, 466, 599, 712, 658, 909, 616, 1076, 548, 1265, 666, 1428, 741, 1432, 800, 981, 802, 470, 800, 4, 810, 14, 728, 134.109, 675.235)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8op5f"]
size = Vector2(99, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nr0rt"]
size = Vector2(66, 111)

[node name="Main" type="Node2D"]
script = ExtResource("1_m1f4g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(695, 390)
texture = ExtResource("1_tk8xb")

[node name="Fire" type="Node" parent="."]

[node name="Fire1" type="GPUParticles2D" parent="Fire"]
material = SubResource("CanvasItemMaterial_bk3ox")
position = Vector2(468, 335)
amount = 16
process_material = SubResource("ParticleProcessMaterial_d8284")
texture = ExtResource("3_y3ryq")
lifetime = 0.6
explosiveness = 0.1

[node name="Fire2" type="GPUParticles2D" parent="Fire"]
material = SubResource("CanvasItemMaterial_bk3ox")
position = Vector2(553, 318)
amount = 16
process_material = SubResource("ParticleProcessMaterial_d8284")
texture = ExtResource("3_y3ryq")
lifetime = 0.5
explosiveness = 0.1

[node name="Fire3" type="GPUParticles2D" parent="Fire"]
material = SubResource("CanvasItemMaterial_bk3ox")
position = Vector2(511, 319)
amount = 16
process_material = SubResource("ParticleProcessMaterial_d8284")
texture = ExtResource("3_y3ryq")
lifetime = 0.5
explosiveness = 0.1

[node name="Smoke" type="GPUParticles2D" parent="Fire"]
position = Vector2(474, 158)
process_material = SubResource("ParticleProcessMaterial_384ip")
texture = ExtResource("3_y3ryq")
lifetime = 3.0
speed_scale = 0.5

[node name="Smoke2" type="GPUParticles2D" parent="Fire"]
position = Vector2(434, 199)
process_material = SubResource("ParticleProcessMaterial_384ip")
texture = ExtResource("3_y3ryq")

[node name="Smoke3" type="GPUParticles2D" parent="Fire"]
position = Vector2(546, 199)
process_material = SubResource("ParticleProcessMaterial_384ip")
texture = ExtResource("3_y3ryq")
lifetime = 0.5

[node name="MainCharacter" parent="." node_paths=PackedStringArray("light_node") instance=ExtResource("3_wj3po")]
position = Vector2(669, 686)
light_node = NodePath("../LightPoint")
speed = 420
active_fake_z_axis = true
max_scale = 3.5
min_y = 0.0
max_y = 1000.0

[node name="Camera" parent="." node_paths=PackedStringArray("character") instance=ExtResource("4_52rv8")]
limit_left = -20
limit_top = 20
limit_right = 1400
limit_bottom = 750
editor_draw_limits = true
character = NodePath("../MainCharacter")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_64g2n")

[node name="LightPoint" type="Node2D" parent="."]
position = Vector2(500, 300)

[node name="AreaToSource" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToSource"]
position = Vector2(1378.5, 706)
shape = SubResource("RectangleShape2D_8op5f")

[node name="AreaToTikal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToTikal"]
position = Vector2(23, 754.5)
shape = SubResource("RectangleShape2D_nr0rt")

[connection signal="body_entered" from="AreaToSource" to="." method="_on_area_to_source_body_entered"]
[connection signal="body_entered" from="AreaToTikal" to="." method="_on_area_to_tikal_body_entered"]
